--- a/WebDasar/index.html
+++ b/WebDasar/index.html
@@ -12,11 +12,11 @@
       kota provinsi tersebut.
     </p>
     <ul>
-      <li>Sejarah</li>
-      <li>Geografis</li>
-      <li>Wisata</li>
+      <li><a href="#sejarah">Sejarah</a></li>
+      <li><a href="#geografis">Geografis</a></li>
+      <li><a href="#wisata">Wisata</a></li>
     </ul>
-    <h2>Sejarah</h2>
+    <h2 id="sejarah">Sejarah</h2>
     <img src="assets/image/history.jpg" alt="Sejarah" />
     <p>
       Kata Bandung berasal dari kata bendung atau bendungan karena terbendungnya
@@ -38,7 +38,7 @@
       Pertiwi tempat Banda berada.
     </p>
 
-    <h2>Geografis</h2>
+    <h2 id="geografis">Geografis</h2>
     <img src="assets/image/geografis.jpg" alt="Geografis" />
     <p>
       Kota Bandung dikelilingi oleh pegunungan, sehingga bentuk morfologi
@@ -57,7 +57,7 @@
       hujan.
     </p>
 
-    <h2>Wisata</h2>
+    <h2 id="wisata">Wisata</h2>
     <p>
       Sejak dibukanya Jalan Tol Cipularang, kota Bandung telah menjadi tujuan
       utama dalam menikmati liburan akhir pekan terutama dari masyarakat yang
@@ -66,7 +66,7 @@
       peninggalan Belanda.
     </p>
 
-    <h2>Farm House Lembang</h2>
+    <h3>Farm House Lembang</h3>
     <img src="assets/image/farm-house.jpg" alt="Farm house" />
     <p>
       Berada di jalur utama Bandung-Lembang, Farm House menjadi objek wisata
@@ -75,7 +75,7 @@
       diterapkan dalam bentuk spot swafoto Instagramable.
     </p>
 
-    <h2>Observatorium Bosscha</h2>
+    <h3>Observatorium Bosscha</h3>
     <img src="assets/image/bosscha.jpg" alt="Bosscha" />
     <p>
       Memiliki beberapa teleskop, antara lain, Refraktor Ganda Zeiss, Schmidt
