Menambahkan header dab footer:

--- a/WebDasar/index.html
+++ b/WebDasar/index.html
@@ -6,17 +6,20 @@
     <title>Halaman Profil Bandung</title>
   </head>
   <body>
-    <h1>Bandung</h1>
-    
-    <p>
-      Kota metropolitan terbesar di Provinsi Jawa Barat, sekaligus menjadi ibu
-      kota provinsi tersebut.
-    </p>
-    <ul>
-      <li><a href="#sejarah">Sejarah</a></li>
-      <li><a href="#geografis">Geografis</a></li>
-      <li><a href="#wisata">Wisata</a></li>
-    </ul>
+    <header>
+      <h1>Bandung</h1>
+      <p>
+        Kota metropolitan terbesar di Provinsi Jawa Barat, sekaligus menjadi ibu
+        kota provinsi tersebut.
+      </p>
+      <nav>
+        <ul>
+          <li><a href="#sejarah">Sejarah</a></li>
+          <li><a href="#geografis">Geografis</a></li>
+          <li><a href="#wisata">Wisata</a></li>
+        </ul>
+      </nav>
+    </header>
     <h2 id="sejarah">Sejarah</h2>
     <img src="assets/image/history.jpg" alt="Sejarah" />
     <p>
@@ -89,5 +92,7 @@
       pendidikan, diberikan jadwal hari Selasa sampai Jumat. Sementara itu,
       kunjungan individu dibuka setiap hari Sabtu.
     </p>
+
+    <footer>&copy; 2023, Dicoding Academy</footer>
   </body>
 </html>
