Menambahkan elemen aside

--- a/WebDasar/index.html
+++ b/WebDasar/index.html
@@ -98,6 +98,19 @@
           Sementara itu, kunjungan individu dibuka setiap hari Sabtu.
         </p>
       </article>
+
+      <aside>
+        <article>
+          <header>
+            <h2>Kota Bandung</h2>
+            <p>Kota Kembang Paris van Java</p>
+            <figure>
+              <img src="img/bandung-badge.png" alt=""/>
+              <figcaption>Lambang</figcaption>
+            </figure>
+          </header>
+        </article>
+      </aside>
     </main>
     <footer>&copy; 2023, Dicoding Academy</footer>
   </body>
