--- a/WebDasar/index.html
+++ b/WebDasar/index.html
@@ -66,37 +66,42 @@
         </p>
       </article>
       <article>
-        <h2 id="wisata">Wisata</h2>
-        <p>
-          Sejak dibukanya Jalan Tol Cipularang, kota Bandung telah menjadi
-          tujuan utama dalam menikmati liburan akhir pekan terutama dari
-          masyarakat yang berasal dari Jakarta sekitarnya. Selain menjadi kota
-          wisata belanja, kota Bandung juga dikenal dengan sejumlah besar
-          bangunan lama berarsitektur peninggalan Belanda.
-        </p>
-
-        <h3>Farm House Lembang</h3>
-        <img src="assets/image/farm-house.jpg" alt="Farm house" />
-        <p>
-          Berada di jalur utama Bandung-Lembang, Farm House menjadi objek wisata
-          yang tidak pernah sepi pengunjung. Selain karena letaknya strategis,
-          kawasan ini juga menghadirkan nuansa wisata khas Eropa. Semua itu
-          diterapkan dalam bentuk spot swafoto Instagramable.
-        </p>
-
-        <h3>Observatorium Bosscha</h3>
-        <img src="assets/image/bosscha.jpg" alt="Bosscha" />
-        <p>
-          Memiliki beberapa teleskop, antara lain, Refraktor Ganda Zeiss,
-          Schmidt Bimasakti, Refraktor Bamberg, Cassegrain GOTO, dan Teleskop
-          Surya. Refraktor Ganda Zeiss adalah jenis teleskop terbesar untuk
-          meneropong bintang. Benda ini diletakkan pada atap kubah sehingga saat
-          teropong digunakan, atap tersebut harus dibuka. Observatorium Bosscha
-          boleh dikunjungi oleh siapa pun, tanpa tiket. Namun, bagi yang ingin
-          menggunakan teleskop Zeiss, wajib mendaftarkan diri. Untuk instansi
-          atau lembaga pendidikan, diberikan jadwal hari Selasa sampai Jumat.
-          Sementara itu, kunjungan individu dibuka setiap hari Sabtu.
-        </p>
+        <section>
+          <h2 id="wisata">Wisata</h2>
+          <p>
+            Sejak dibukanya Jalan Tol Cipularang, kota Bandung telah menjadi
+            tujuan utama dalam menikmati liburan akhir pekan terutama dari
+            masyarakat yang berasal dari Jakarta sekitarnya. Selain menjadi kota
+            wisata belanja, kota Bandung juga dikenal dengan sejumlah besar
+            bangunan lama berarsitektur peninggalan Belanda.
+          </p>
+        </section>
+        <section>
+          <h3>Farm House Lembang</h3>
+          <img src="assets/image/farm-house.jpg" alt="Farm house" />
+          <p>
+            Berada di jalur utama Bandung-Lembang, Farm House menjadi objek
+            wisata yang tidak pernah sepi pengunjung. Selain karena letaknya
+            strategis, kawasan ini juga menghadirkan nuansa wisata khas Eropa.
+            Semua itu diterapkan dalam bentuk spot swafoto Instagramable.
+          </p>
+        </section>
+        <section>
+          <h3>Observatorium Bosscha</h3>
+          <img src="assets/image/bosscha.jpg" alt="Bosscha" />
+          <p>
+            Memiliki beberapa teleskop, antara lain, Refraktor Ganda Zeiss,
+            Schmidt Bimasakti, Refraktor Bamberg, Cassegrain GOTO, dan Teleskop
+            Surya. Refraktor Ganda Zeiss adalah jenis teleskop terbesar untuk
+            meneropong bintang. Benda ini diletakkan pada atap kubah sehingga
+            saat teropong digunakan, atap tersebut harus dibuka. Observatorium
+            Bosscha boleh dikunjungi oleh siapa pun, tanpa tiket. Namun, bagi
+            yang ingin menggunakan teleskop Zeiss, wajib mendaftarkan diri.
+            Untuk instansi atau lembaga pendidikan, diberikan jadwal hari Selasa
+            sampai Jumat. Sementara itu, kunjungan individu dibuka setiap hari
+            Sabtu.
+          </p>
+        </section>
       </article>
 
       <aside>
@@ -105,7 +110,7 @@
             <h2>Kota Bandung</h2>
             <p>Kota Kembang Paris van Java</p>
             <figure>
-              <img src="img/bandung-badge.png" alt=""/>
+              <img src="img/bandung-badge.png" alt="" />
               <figcaption>Lambang</figcaption>
             </figure>
           </header>
