--- a/WebDasar/Label_Element.html
+++ b/WebDasar/Label_Element.html
@@ -9,13 +9,13 @@
     <div>
       <label for="email">Email</label>
       <br />
-      <input type="email" id="email" />
+      <input type="email" id="email" placeholder="example@mail.com" required />
     </div>
-
+    
     <div>
       <label for="password">Password</label>
       <br />
-      <input type="password" id="password" />
+      <input type="password" id="password" placeholder="********" required />
     </div>
   </body>
 </html>
