Menambahkan class fancy

--- a/CSS-Dasar/Class_Selector.html
+++ b/CSS-Dasar/Class_Selector.html
@@ -14,5 +14,8 @@
       Paragraf yang menampilkan teks dengan warna standar tanpa menerapkan
       styling
     </p>
+
+    <h1 class="fancy">Heading dengan teks bergaya fancy</h1>
+    <p class="fancy">Paragraf dengan teks bergaya fancy</p>
   </body>
 </html>
