--- a/WebDasar/index.html
+++ b/WebDasar/index.html
@@ -14,11 +14,13 @@
   </head>
   <body>
     <header>
-      <h1>Bandung</h1>
-      <p>
-        Kota metropolitan terbesar di Provinsi Jawa Barat, sekaligus menjadi ibu
-        kota provinsi tersebut.
-      </p>
+      <div class="jumbotron">
+        <h1>Bandung</h1>
+        <p>
+          Kota metropolitan terbesar di Provinsi Jawa Barat, sekaligus menjadi
+          ibu kota provinsi tersebut.
+        </p>
+      </div>
       <nav>
         <ul>
           <li><a href="#sejarah">Sejarah</a></li>
@@ -31,7 +33,11 @@
       <div id="content">
         <article id="sejarah" class="card">
           <h2>Sejarah</h2>
-          <img src="assets/image/history.jpg" alt="Sejarah" class="featured-image"/>
+          <img
+            src="assets/image/history.jpg"
+            alt="Sejarah"
+            class="featured-image"
+          />
           <p>
             Kata Bandung berasal dari kata bendung atau bendungan karena
             terbendungnya sungai Citarum oleh lava Gunung Tangkuban Parahu yang
@@ -55,7 +61,11 @@
         </article>
         <article id="geografis" class="card">
           <h2>Geografis</h2>
-          <img src="assets/image/geografis.jpg" alt="Geografis" class="featured-image" />
+          <img
+            src="assets/image/geografis.jpg"
+            alt="Geografis"
+            class="featured-image"
+          />
           <p>
             Kota Bandung dikelilingi oleh pegunungan, sehingga bentuk morfologi
             wilayahnya bagaikan sebuah mangkok raksasa, secara geografis kota
@@ -84,7 +94,11 @@
           </p>
           <section>
             <h3>Farm House Lembang</h3>
-            <img src="assets/image/farm-house.jpg" alt="Farm house" class="featured-image"/>
+            <img
+              src="assets/image/farm-house.jpg"
+              alt="Farm house"
+              class="featured-image"
+            />
             <p>
               Berada di jalur utama Bandung-Lembang, Farm House menjadi objek
               wisata yang tidak pernah sepi pengunjung. Selain karena letaknya
@@ -94,7 +108,11 @@
           </section>
           <section>
             <h3>Observatorium Bosscha</h3>
-            <img src="assets/image/bosscha.jpg" alt="Bosscha" class="featured-image"/>
+            <img
+              src="assets/image/bosscha.jpg"
+              alt="Bosscha"
+              class="featured-image"
+            />
             <p>
               Memiliki beberapa teleskop, antara lain, Refraktor Ganda Zeiss,
               Schmidt Bimasakti, Refraktor Bamberg, Cassegrain GOTO, dan
